lintian (2.3.0) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - init.d-script-missing-dependency-on-local_fs (experimental)
      - init.d-script-missing-dependency-on-remote_fs (experimental)
      - obsolete-relation-form-in-source
    + Removed:
      - build-depends-without-arch-dep

  * checks/*:
    + [RA] Use Lintian::Tags instead of Tags.
  * checks/binaries{,.desc}:
    + [RA] Allow any RPATH containing $ORIGIN or ${ORIGIN}, not just the
      literal value $ORIGIN.  (Closes: #557511)
    + [ADB] Exempt all binary packages built from the zlib source from
      the embedded-zlib test, not just those with binary package names
      matching zlib.+.  Thanks, Mark Brown.
    + [RA] Spelling errors are no longer normalized to lowercase.
  * checks/changelog-file:
    + [RA] Suppress latest-debian-changelog-entry-without-new-date if the
      distribution is UNRELEASED.  Thanks, Raphaël Hertzog.
      (Closes: #560149)
    + [RA] Also ignore too-long lines that consist of "See" followed by an
      unbreakable word.  Thanks, Jari Aalto.  (Closes: #560005)
  * checks/control-file{,.desc}:
    + [RA] Check for < and > version dependencies in debian/control since
      dpkg-source helpfully rewrites and fixes them in binary packages.
      Thanks, Jakub Wilk.  (Closes: #557971)
  * checks/cruft:
    + [RA] Allow an automake or libtool dependency in Build-Depends-Indep
      to also satisfy the check for outdated helper files.  Thanks,
      Guillaume Delacour.  (Closes: #557530)
    + [RA] Ignore files in .pc, created by unpacking 3.0 (quilt) packages.
      Thanks, Ahmed El-Mahmoudy.  (Closes: #556022)
  * checks/fields{,.desc}:
    + [ADB] Re-order the fields of build-depends-on-build-essential so that
      all of the descriptive text is included.  Thanks, Jonathan Wiltshire.
      (Closes: #557786)
    + [RA] For lib-recommends-documentation, exclude packages ending in
      -tools or -bin.  Thanks, Jay Berkenbilt.  (Closes: #557883)