@@ -42,6 +42,7 @@ Portions Copyright (C) 2008 Patrick Schoenfeld
 Portions Copyright (C) 2008 Niko Tyni
 Portions Copyright (C) 2008-2009 Raphael Geissert
 Portions Copyright (C) 2008-2009 Adam D. Barratt
+Portions Copyright (C) 2009 Stéphane Glondu
 
 This program is free software; you may redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
