@@ -559,6 +559,11 @@ Checks whether the package is consistent as to whether it
 is an NMU.
 
 .TP
+.B ocaml (ocaml)
+Checks various things related to packaging of OCaml libraries and other
+software.
+
+.TP
 .B patch\-systems (pat)
 Check source package use of patch systems.
 
