@@ -1,0 +1,5 @@
+int
+symbol(void)
+{
+    return 42;
+}
