@@ -1,0 +1,12 @@
+E: libocaml-general-ocaml-dev: ocaml-dangling-cmx usr/lib/ocaml/symbol2.cmx
+E: libocaml-general-ocaml: ocaml-dangling-cmx usr/lib/ocaml/symbol.cmx
+E: libocaml-general-ocaml: ocaml-dangling-cmxa usr/lib/ocaml/foo.cmxa
+I: libocaml-general-ocaml-dev: ocaml-dangling-cmi 2 more files not shown
+I: libocaml-general-ocaml-dev: ocaml-dangling-cmi usr/lib/foo.cmi
+I: libocaml-general-ocaml-dev: ocaml-dangling-cmi usr/lib/ocaml/bar.cmi
+I: libocaml-general-ocaml-dev: ocaml-dangling-cmi usr/lib/ocaml/baz.cmi
+I: libocaml-general-ocaml-dev: ocaml-stray-cmo usr/lib/ocaml/bleh.cma
+P: libocaml-general-ocaml-dev: ocaml-dev-file-not-in-usr-lib-ocaml 1 file in /usr/lib
+P: libocaml-general-ocaml-dev: ocaml-meta-without-suggesting-findlib
+P: libocaml-general-ocaml: ocaml-dev-file-in-nondev-package 2 files in /usr/lib
+W: libocaml-general-ocaml: ocaml-dangling-cmxs usr/lib/ocaml/bar.cmxs
